2005-11-10  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/proxies.py:
	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/proxy.py:
	* kiwi/ui/widgets/spinbutton.py:
	Move validate_data out of read, and do it manually afterwards,
	there's only two call sites anyway.

2005-11-09  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gadgets.py:
	* kiwi/ui/views.py:
	* kiwi/ui/widgets/checkbutton.py:
	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/label.py:
	* kiwi/ui/widgets/list.py:
	* kiwi/ui/widgets/radiobutton.py:
	* kiwi/ui/widgets/spinbutton.py:
	* kiwi/ui/widgets/textview.py:
	* kiwi/utils.py:

	Add new method utils.type_register, use it everywhere.
	
2005-11-09  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/proxy.py
	(WidgetMixinSupportValidation.validate_data): Only set blank for
	mandatory widgets and when data is empty. Always convert '' to None
	for non-string types.

	* kiwi/ui/widgets/entry.py (Entry.read): Remove a couple of big hacks

2005-11-08  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py (Entry.read): Add a hack to try to fix 
	validation for empty entries.

	* kiwi/controllers.py (BaseController.__init__): Add support for 
	automatic keyboard accelerators of type key_name or key_modifier_name.

	* kiwi/ui/widgets/proxy.py (WidgetMixinSupportValidation.set_invalid): 
	Only connect to done here, that's the only place where we need to 
	use it. When done, set text and icon. Also disconnect the signal
	so it won't be called multiple times.

	* kiwi/ui/widgets/entry.py (Entry._update_current_object): Add custom
	validation, when using objects.
	
	* kiwi/ui/gadgets.py (FadeOut.start): Add additional state, so we know 
	if we're done when start() is called multiple times. Always emit done, 
	since we're depending on it in other places.

	* kiwi/ui/widgets/proxy.py (WidgetMixinSupportValidation.don): Wait 
	until the completion is done to set the text.
